# SUSI

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml  ci.yml  update-docs.yml
analysis/: scrapbook.py
docs/: index.md  input_parameters.md
golden_file_test/: golden_susi.nc  test.py
input_parameters/: index.html
plot/: fig_reality_check.py  figures_ecosystem_services.py
simulations/: main.py  susi_calls.py  susi_calls_scenarios.py
src/inputs/parameters/: develop_scens.py  golden_test.py
src/susi/: __init__.py  config.py
src/susi/core/: allometry.py  canopygrid.py  canopylayer.py  esom.py  fertilization.py  figures.py  gvegetation.py  methane.py  mosslayer.py  outputs.py  stand.py  stem_curve.py  strip.py  susi_io.py  susi_main.py  susi_utils.py  temperature.py
src/susi/io/: app_structure.py  extra_pydantic_types.py  metadata_model.py  netcdf_utils.py  parameter_creation.py  parameter_model.py  plan_parameters.py  simulation_configuration_model.py  susi_para.py  susi_parameter_model.py  utils.py
src/susi/io/parameters/: develop_scens.py  golden_test.py
src/tools/: params_trial.py  susi_calls.py  susi_calls_scenarios.py
tests/: test_parameter_creation.py  test_plan_parameters.py
tools/: susi_calls.py  susi_calls_scenarios.py
try/: index.html
