[project]
name = "SUSI"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "txart", email = "iurzainki@gmail.com" }]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
susi = "susi:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
