[project]
name = "SUSI"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "txart", email = "iurzainki@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "netcdf4>=1.7.3",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pyproj>=3.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]

[project.scripts]
susi = "susi:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "pytest>=9.0.1",
]
